#15514 closed bug (fixed)
BLangugage.SetTo(country_code) doesn't verify if country_code is valid
Reported by: | r4h33m | Owned by: | pulkomandy |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta2 |
Component: | Kits/Locale Kit | Version: | R1/Development |
Keywords: | BLanguage | Cc: | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
Locale Kit.
BLanguage.SetTo takes a char* country_code, but returns a B_OK even if that country code doesn't exist. This invalid language can then be set as the preferred system locale languages, still giving no errors. Checking the locale preferences GUI after this gives a blank language preference list.
To replicate: BLangauge.SetTo("ooo") (gives B_OK)
Change History (2)
comment:1 by , 5 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
comment:2 by , 5 years ago
Milestone: | Unscheduled → R1/beta2 |
---|
Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone
Note:
See TracTickets
for help on using tickets.
Fixed in hrev53665.