BLanguage: check locale validity in SetTo.

Fixes #15514